cmake_minimum_required(VERSION 3.24)
project(Project)

set(CMAKE_CXX_STANDARD 17)

add_executable(Project_01 "Hello World.cpp")
add_executable(Project_7-1 "number_judge.cpp")
add_executable(Project_7-2 "7-2.cpp")
add_executable(Project_7-3 "KMP+.cpp")
add_executable(Project_8-1 "8-1.cpp")
add_executable(Project_8-2 "8-2.cpp")
add_executable(Project_8-3 "8-3.cpp")
add_executable(Project_9-1 "9-1.cpp")
add_executable(Project_9-3 "9-3.cpp")
add_executable(Project_9-2 "9-2.cpp")
add_executable(Project_9-2_2 "9-2_2.cpp")
add_executable(Project_10-1 "10-1.cpp")
add_executable(Project_10-2 "10-2.cpp")
add_executable(Project_10-3 "10-3.cpp")
add_executable(Project_11-1 "11-1.cpp")
add_executable(Project_11-2 "11-2.cpp")
add_executable(Project_11-3 "11-3.cpp")
add_executable(Project_r2-1 "r2-1.cpp")
add_executable(Project_r2-2 "r2-2.cpp")
add_executable(Project_r2-3 "r2-3.cpp")
add_executable(Project_r2-4 "r2-4.cpp")
add_executable(Project_13-1 "13-1.cpp")
add_executable(Project_13-2 "13-2.cpp")
add_executable(Project_13-3 "13-3.cpp")
add_executable(Project_13-3-2 "13-3-2.cpp")
add_executable(Project_14-1 "14-1.cpp")
add_executable(Project_14-2 "14-2.cpp")
add_executable(Project_14-3 "14-3.cpp")
add_executable(Project_14-2-2 "14-2-2.cpp")
add_executable(Project_15-1 "15-1.cpp")
add_executable(Project_15-1-2 "15-1-2.cpp")
add_executable(Project_15-2 "15-2.cpp")
add_executable(Project_15-2-2 "15-2-2.cpp")
add_executable(Project_15-3 "15-3.cpp")
add_executable(Project_hw-1 "hw-1.cpp")
add_executable(Project_hw_2 "hw_2.cpp")
add_executable(Project_hw-2 "hw-2.cpp")
add_executable(Project_hw-3 "hw-3.cpp")
add_executable(Project_hw_4 "hw_4.cpp")
add_executable(Project_hw-4 "hw-4.cpp")
add_executable(Project_r3_1 "r3_1.cpp")
add_executable(Project_r3_2 "r3_2.cpp")
add_executable(Project_r3_3 "r3_3.cpp")
add_executable(Project_r3_4 "r3_4.cpp")
add_executable(Project_try "try.cpp")
add_executable(Fixed-Point-Iteration "Fixed-Point-Iteration.cpp")
add_executable(Project_GTA1-1 "GTA1-1.cpp")
add_executable(Project_GTA1-2 "GTA1-2.cpp")
add_executable(Project_GTA2-1 "GTA2-1.cpp")
add_executable(Project_GTA2-2 "GTA2-2.cpp")
add_executable(Project_GTA3-1 "GTA3-1.cpp")
add_executable(Project_GTA3-2 "GTA3-2.cpp")
add_executable(Project_GTA4-1 "GTA4-1.cpp")
add_executable(Project_GTA4-2 "GTA4-2.cpp")